package graph;

public interface Distance {

    int getDistance(Vertex vertex1,
                    Vertex vertex2);

}
