package maze.model;

/**
 * @author Dominique Blouin
 */
public interface ModelObserver {

    void modelStateChanged();
}
