@startuml

title __TP06MAZUIDIJKSTRA's Class Diagram__\n

  namespace com.example.telecom.paris.maze.graph {
    class com.example.telecom.paris.maze.graph.Dijkstra {
    }
  }
  

  namespace com.example.telecom.paris.maze.graph {
    interface com.example.telecom.paris.maze.graph.Distance {
    }
  }
  

  namespace com.example.telecom.paris.maze.graph {
    interface com.example.telecom.paris.maze.graph.Graph {
    }
  }
  

  namespace com.example.telecom.paris.maze.graph {
    interface com.example.telecom.paris.maze.graph.MinDistance {
    }
  }
  

  namespace com.example.telecom.paris.maze.graph {
    class com.example.telecom.paris.maze.graph.NotAdjacentVerticesException {
    }
  }
  

  namespace com.example.telecom.paris.maze.graph {
    interface com.example.telecom.paris.maze.graph.ProcessedVertexesSet {
    }
  }
  

  namespace com.example.telecom.paris.maze.graph {
    interface com.example.telecom.paris.maze.graph.ShortestPaths {
    }
  }
  

  namespace com.example.telecom.paris.maze.graph {
    interface com.example.telecom.paris.maze.graph.Vertex {
    }
  }
  

  namespace com.example.telecom.paris.maze.graph {
    namespace impl {
      class com.example.telecom.paris.maze.graph.impl.BasicEdge {
      }
    }
  }
  

  namespace com.example.telecom.paris.maze.graph {
    namespace impl {
      class com.example.telecom.paris.maze.graph.impl.BasicGraph {
      }
    }
  }
  

  namespace com.example.telecom.paris.maze.graph {
    namespace impl {
      class com.example.telecom.paris.maze.graph.impl.BasicMinDistance {
      }
    }
  }
  

  namespace com.example.telecom.paris.maze.graph {
    namespace impl {
      class com.example.telecom.paris.maze.graph.impl.BasicShortestPaths {
      }
    }
  }
  

  namespace com.example.telecom.paris.maze.graph {
    namespace impl {
      class com.example.telecom.paris.maze.graph.impl.BasicVertex {
      }
    }
  }
  

  namespace com.example.telecom.paris.maze.graph {
    namespace impl {
      class com.example.telecom.paris.maze.graph.impl.BasicVertexesSet {
      }
    }
  }
  

  namespace com.example.telecom.paris.maze.mazeReadingException {
    class com.example.telecom.paris.maze.mazeReadingException.MazeReadingException {
    }
  }
  

  namespace com.example.telecom.paris.maze.model {
    interface com.example.telecom.paris.maze.model.MazeBoxModel {
    }
  }
  

  namespace com.example.telecom.paris.maze.model {
    interface com.example.telecom.paris.maze.model.MazeFactory {
    }
  }
  

  namespace com.example.telecom.paris.maze.model {
    interface com.example.telecom.paris.maze.model.MazeModel {
    }
  }
  

  namespace com.example.telecom.paris.maze.model {
    interface com.example.telecom.paris.maze.model.MazePersistenceManager {
    }
  }
  

  namespace com.example.telecom.paris.maze.model {
    interface com.example.telecom.paris.maze.model.ModelObserver {
    }
  }
  

  namespace com.example.telecom.paris.maze.services {
    class com.example.telecom.paris.maze.services.ABox {
    }
  }
  

  namespace com.example.telecom.paris.maze.services {
    class com.example.telecom.paris.maze.services.DBox {
    }
  }
  

  namespace com.example.telecom.paris.maze.services {
    class com.example.telecom.paris.maze.services.EBox {
    }
  }
  

  namespace com.example.telecom.paris.maze.services {
    class com.example.telecom.paris.maze.services.Labyrinthe {
    }
  }
  

  namespace com.example.telecom.paris.maze.services {
    abstract class com.example.telecom.paris.maze.services.MBox {
    }
  }
  

  namespace com.example.telecom.paris.maze.services {
    class com.example.telecom.paris.maze.services.MFactory {
    }
  }
  

  namespace com.example.telecom.paris.maze.services {
    class com.example.telecom.paris.maze.services.Maze {
    }
  }
  

  namespace com.example.telecom.paris.maze.services {
    class com.example.telecom.paris.maze.services.WBox {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    abstract class com.example.telecom.paris.maze.ui.AbstractBoxTypeRadioButton {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.ArrivalBoxButton {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.BoxMouseAdapter {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.BoxPanel {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.ChooserButtonGroup {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.ClearMazeMenuItem {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.ClearShortestPathButton {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.DepartureBoxButton {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.DrawingMenuBar {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.EmptyBoxButton {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.FileMazePersistenceManager {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.FileMenu {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.InformationMazeMenuItem {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.MazeEditor {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.MazeMenu {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.MazePanel {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.NewMazeMenuItem {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.OpenFileMenuItem {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.QuitMenuItem {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.RootPanel {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.SaveAsMenuItem {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.SaveMenuItem {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.SolveMazeButton {
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.WallBoxButton {
    }
  }
  

  namespace graph {
    class graph.Dijkstra {
    }
  }
  

  namespace graph {
    interface graph.Distance {
    }
  }
  

  namespace graph {
    interface graph.Graph {
    }
  }
  

  namespace graph {
    interface graph.MinDistance {
    }
  }
  

  namespace graph {
    interface graph.ProcessedVertexesSet {
    }
  }
  

  namespace graph {
    interface graph.ShortestPaths {
    }
  }
  

  namespace graph {
    interface graph.Vertex {
    }
  }
  

  namespace graph {
    namespace impl {
      class graph.impl.BasicEdge {
      }
    }
  }
  

  namespace graph {
    namespace impl {
      class graph.impl.BasicGraph {
      }
    }
  }
  

  namespace graph {
    namespace impl {
      class graph.impl.BasicMinDistance {
      }
    }
  }
  

  namespace graph {
    namespace impl {
      class graph.impl.BasicShortestPaths {
      }
    }
  }
  

  namespace graph {
    namespace impl {
      class graph.impl.BasicVertex {
      }
    }
  }
  

  namespace graph {
    namespace impl {
      class graph.impl.BasicVertexesSet {
      }
    }
  }
  

  namespace maze {
    class maze.ABox {
    }
  }
  

  namespace maze {
    class maze.DBox {
    }
  }
  

  namespace maze {
    class maze.EBox {
    }
  }
  

  namespace maze {
    abstract class maze.MBox {
    }
  }
  

  namespace maze {
    class maze.MFactory {
    }
  }
  

  namespace maze {
    class maze.Maze {
    }
  }
  

  namespace maze {
    class maze.SoundHandler {
    }
  }
  

  namespace maze {
    class maze.WBox {
    }
  }
  

  namespace maze {
    class maze.main {
    }
  }
  

  com.example.telecom.paris.maze.graph.impl.BasicEdge o-- com.example.telecom.paris.maze.graph.Vertex : vertex1
  com.example.telecom.paris.maze.graph.impl.BasicEdge o-- com.example.telecom.paris.maze.graph.Vertex : vertex2
  com.example.telecom.paris.maze.graph.impl.BasicGraph .up.|> com.example.telecom.paris.maze.graph.Distance
  com.example.telecom.paris.maze.graph.impl.BasicGraph .up.|> com.example.telecom.paris.maze.graph.Graph
  com.example.telecom.paris.maze.graph.impl.BasicMinDistance .up.|> com.example.telecom.paris.maze.graph.MinDistance
  com.example.telecom.paris.maze.graph.impl.BasicShortestPaths .up.|> com.example.telecom.paris.maze.graph.ShortestPaths
  com.example.telecom.paris.maze.graph.impl.BasicVertex .up.|> com.example.telecom.paris.maze.graph.Vertex
  com.example.telecom.paris.maze.graph.impl.BasicVertex o-- com.example.telecom.paris.maze.graph.Graph : graph
  com.example.telecom.paris.maze.graph.impl.BasicVertexesSet .up.|> com.example.telecom.paris.maze.graph.ProcessedVertexesSet
  com.example.telecom.paris.maze.services.ABox -up-|> com.example.telecom.paris.maze.services.MBox
  com.example.telecom.paris.maze.services.DBox -up-|> com.example.telecom.paris.maze.services.MBox
  com.example.telecom.paris.maze.services.EBox -up-|> com.example.telecom.paris.maze.services.MBox
  com.example.telecom.paris.maze.services.MBox .up.|> com.example.telecom.paris.maze.graph.Vertex
  com.example.telecom.paris.maze.services.MBox .up.|> com.example.telecom.paris.maze.model.MazeBoxModel
  com.example.telecom.paris.maze.services.MBox o-- com.example.telecom.paris.maze.services.Maze : maze
  com.example.telecom.paris.maze.services.MFactory .up.|> com.example.telecom.paris.maze.model.MazeFactory
  com.example.telecom.paris.maze.services.Maze .up.|> com.example.telecom.paris.maze.graph.Distance
  com.example.telecom.paris.maze.services.Maze .up.|> com.example.telecom.paris.maze.graph.Graph
  com.example.telecom.paris.maze.services.Maze .up.|> com.example.telecom.paris.maze.model.MazeModel
  com.example.telecom.paris.maze.services.Maze o-- com.example.telecom.paris.maze.services.ABox : arrival
  com.example.telecom.paris.maze.services.Maze o-- com.example.telecom.paris.maze.services.DBox : departure
  com.example.telecom.paris.maze.services.Maze o-- com.example.telecom.paris.maze.services.MFactory : mfactory
  com.example.telecom.paris.maze.services.Maze o-- com.example.telecom.paris.maze.graph.ShortestPaths : shortestPaths
  com.example.telecom.paris.maze.services.WBox -up-|> com.example.telecom.paris.maze.services.MBox
  com.example.telecom.paris.maze.ui.AbstractBoxTypeRadioButton .up.|> java.awt.event.ActionListener
  com.example.telecom.paris.maze.ui.AbstractBoxTypeRadioButton -up-|> javax.swing.JRadioButton
  com.example.telecom.paris.maze.ui.AbstractBoxTypeRadioButton o-- com.example.telecom.paris.maze.ui.MazePanel : mazePanel
  com.example.telecom.paris.maze.ui.ArrivalBoxButton .up.|> java.awt.event.ActionListener
  com.example.telecom.paris.maze.ui.ArrivalBoxButton -up-|> com.example.telecom.paris.maze.ui.AbstractBoxTypeRadioButton
  com.example.telecom.paris.maze.ui.BoxMouseAdapter -up-|> java.awt.event.MouseAdapter
  com.example.telecom.paris.maze.ui.BoxMouseAdapter o-- com.example.telecom.paris.maze.ui.BoxPanel : boxPanel
  com.example.telecom.paris.maze.ui.BoxPanel -up-|> javax.swing.JPanel
  com.example.telecom.paris.maze.ui.BoxPanel o-- com.example.telecom.paris.maze.model.MazeModel : mazeModel
  com.example.telecom.paris.maze.ui.ChooserButtonGroup -up-|> javax.swing.JPanel
  com.example.telecom.paris.maze.ui.ClearMazeMenuItem .up.|> java.awt.event.ActionListener
  com.example.telecom.paris.maze.ui.ClearMazeMenuItem -up-|> javax.swing.JMenuItem
  com.example.telecom.paris.maze.ui.ClearMazeMenuItem o-- com.example.telecom.paris.maze.ui.MazeEditor : mazeEditor
  com.example.telecom.paris.maze.ui.ClearShortestPathButton .up.|> java.awt.event.ActionListener
  com.example.telecom.paris.maze.ui.ClearShortestPathButton -up-|> javax.swing.JButton
  com.example.telecom.paris.maze.ui.ClearShortestPathButton o-- com.example.telecom.paris.maze.ui.MazeEditor : mazeEditor
  com.example.telecom.paris.maze.ui.DepartureBoxButton -up-|> com.example.telecom.paris.maze.ui.AbstractBoxTypeRadioButton
  com.example.telecom.paris.maze.ui.DrawingMenuBar -up-|> javax.swing.JMenuBar
  com.example.telecom.paris.maze.ui.DrawingMenuBar o-- com.example.telecom.paris.maze.ui.FileMenu : fileMenu
  com.example.telecom.paris.maze.ui.EmptyBoxButton -up-|> com.example.telecom.paris.maze.ui.AbstractBoxTypeRadioButton
  com.example.telecom.paris.maze.ui.FileMazePersistenceManager .up.|> com.example.telecom.paris.maze.model.MazePersistenceManager
  com.example.telecom.paris.maze.ui.FileMenu -up-|> javax.swing.JMenu
  com.example.telecom.paris.maze.ui.FileMenu o-- com.example.telecom.paris.maze.ui.SaveAsMenuItem : saveAsMenuItem
  com.example.telecom.paris.maze.ui.FileMenu o-- com.example.telecom.paris.maze.ui.SaveMenuItem : saveMenuItem
  com.example.telecom.paris.maze.ui.InformationMazeMenuItem .up.|> java.awt.event.ActionListener
  com.example.telecom.paris.maze.ui.InformationMazeMenuItem -up-|> javax.swing.JMenuItem
  com.example.telecom.paris.maze.ui.InformationMazeMenuItem o-- com.example.telecom.paris.maze.ui.MazeEditor : mazeEditor
  com.example.telecom.paris.maze.ui.MazeEditor .up.|> com.example.telecom.paris.maze.model.ModelObserver
  com.example.telecom.paris.maze.ui.MazeEditor -up-|> javax.swing.JFrame
  com.example.telecom.paris.maze.ui.MazeEditor o-- com.example.telecom.paris.maze.model.MazeModel : maze
  com.example.telecom.paris.maze.ui.MazeEditor o-- com.example.telecom.paris.maze.model.MazePersistenceManager : persistenceManager
  com.example.telecom.paris.maze.ui.MazeEditor o-- com.example.telecom.paris.maze.ui.RootPanel : rootPanel
  com.example.telecom.paris.maze.ui.MazeMenu -up-|> javax.swing.JMenu
  com.example.telecom.paris.maze.ui.MazePanel -up-|> javax.swing.JPanel
  com.example.telecom.paris.maze.ui.MazePanel o-- com.example.telecom.paris.maze.ui.MazeEditor : mazeEditor
  com.example.telecom.paris.maze.ui.MazePanel o-- com.example.telecom.paris.maze.ui.AbstractBoxTypeRadioButton : selectedBoxTypeButton
  com.example.telecom.paris.maze.ui.NewMazeMenuItem .up.|> java.awt.event.ActionListener
  com.example.telecom.paris.maze.ui.NewMazeMenuItem -up-|> javax.swing.JMenuItem
  com.example.telecom.paris.maze.ui.NewMazeMenuItem o-- com.example.telecom.paris.maze.ui.MazeEditor : mazeEditor
  com.example.telecom.paris.maze.ui.OpenFileMenuItem .up.|> java.awt.event.ActionListener
  com.example.telecom.paris.maze.ui.OpenFileMenuItem -up-|> javax.swing.JMenuItem
  com.example.telecom.paris.maze.ui.OpenFileMenuItem o-- com.example.telecom.paris.maze.ui.MazeEditor : mazeEditor
  com.example.telecom.paris.maze.ui.QuitMenuItem .up.|> java.awt.event.ActionListener
  com.example.telecom.paris.maze.ui.QuitMenuItem -up-|> javax.swing.JMenuItem
  com.example.telecom.paris.maze.ui.QuitMenuItem o-- com.example.telecom.paris.maze.ui.MazeEditor : mazeEditor
  com.example.telecom.paris.maze.ui.RootPanel -up-|> javax.swing.JPanel
  com.example.telecom.paris.maze.ui.RootPanel o-- com.example.telecom.paris.maze.ui.ChooserButtonGroup : chooserButtonGroup
  com.example.telecom.paris.maze.ui.RootPanel o-- com.example.telecom.paris.maze.ui.MazePanel : mazePanel
  com.example.telecom.paris.maze.ui.SaveAsMenuItem .up.|> java.awt.event.ActionListener
  com.example.telecom.paris.maze.ui.SaveAsMenuItem -up-|> javax.swing.JMenuItem
  com.example.telecom.paris.maze.ui.SaveAsMenuItem o-- com.example.telecom.paris.maze.ui.MazeEditor : mazeEditor
  com.example.telecom.paris.maze.ui.SaveMenuItem .up.|> java.awt.event.ActionListener
  com.example.telecom.paris.maze.ui.SaveMenuItem -up-|> javax.swing.JMenuItem
  com.example.telecom.paris.maze.ui.SaveMenuItem o-- com.example.telecom.paris.maze.ui.MazeEditor : mazeEditor
  com.example.telecom.paris.maze.ui.SolveMazeButton .up.|> java.awt.event.ActionListener
  com.example.telecom.paris.maze.ui.SolveMazeButton -up-|> javax.swing.JButton
  com.example.telecom.paris.maze.ui.SolveMazeButton o-- com.example.telecom.paris.maze.ui.MazeEditor : mazeEditor
  com.example.telecom.paris.maze.ui.WallBoxButton -up-|> com.example.telecom.paris.maze.ui.AbstractBoxTypeRadioButton
  graph.impl.BasicGraph .up.|> graph.Distance
  graph.impl.BasicGraph .up.|> graph.Graph
  graph.impl.BasicMinDistance .up.|> graph.MinDistance
  graph.impl.BasicShortestPaths .up.|> graph.ShortestPaths
  graph.impl.BasicVertex .up.|> graph.Vertex
  graph.impl.BasicVertexesSet .up.|> graph.ProcessedVertexesSet
  maze.MBox .up.|> fr.tp.maze.model.MazeBoxModel
  maze.MBox .up.|> graph.Vertex
  maze.MFactory .up.|> fr.tp.maze.model.MazeFactory
  maze.Maze .up.|> fr.tp.maze.model.MazeModel
  maze.Maze .up.|> graph.Distance
  maze.Maze .up.|> graph.Graph


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
